--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,18 @@
 </head>
 
 <body>
-    <h1>MongoStore API</h1>
+    <h1>Store API</h1>
+    <h3>Add as many products as you want</h3>
+    <h3>Properties</h3>
+    <ul>
+        <li>title</li>
+        <li>slogan</li>
+        <li>description</li>
+        <li>category</li>
+        <li>productImage</li>
+        <li>price</li>
+        <li>stars</li>
+    </ul>
     <span><b>/products</b> - GET POST PUT DELETE</span>
 </body>
 
