--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,15 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible"
+        content="IE=edge">
     <title>MongoStore</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-    <h1>Store API 2.0</h1>
+    <h1>Store API 2.1</h1>
     <h3>Add as many products as you want</h3>
     <h3>Properties</h3>
     <ul>
